--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Hola, Soy Joaquin Vento</title>
 </head>
 <body class="container">
         <section class="row my-3 m-auto">
             <div class="col-sm-12 col-lg-4 panelizq">
-                <img src="img/foto-borde.png" alt="">
+                <img src="img/foto.png" alt="">
                 <h1 class="mt-3">JOAQUÍN VENTO PINO</h1>
                 <div class="separador"></div>
                 <div class="perfilPersonal">
                     <h1 class="h5">PERFIL PERSONAL</h1>
-                    <p>Hola, soy un desarrollador web con mucha motivación por formar parte de un proyecto para seguir desarrollándome y seguir adquiriendo conocimientos dentro del ámbito del desarrollo web</p>
+                    <p>Hola, soy un desarrollador de aplicaciones web con mucha motivación por formar parte de un proyecto para seguir desarrollándome y seguir adquiriendo conocimientos dentro del ámbito del desarrollo web.</p>
                 </div>
                 <div class="aptitudes">
                     <h1 class="h5">APTITUDES Y HABILIDADES</h1>
@@ -49,25 +52,26 @@
                     </div>
                 </div>
                 <div class="skills">
-                    <h1 class="h3">SKILLS</h1>
+                    <h1 class="h3">SKILLS </h1>
                     <ul>
                         <li>- HTML</li>
                         <li>- CSS</li>
+                        <li>- Photoshop</li>
                         <li>- JavaScript</li>
                         <li>- JQuery</li>
+                        <li>- JavaServer Pages</li>
                         <li>- AJAX</li>
                         <li>- PHP</li>
                         <li>- BootStrap</li>
-                        <li>- TailWind CSS</li>
-                        <li>- Sass</li>
-                        <li>- Less</li>
+                        <li>- TailWind</li>
+                        <li>- Sass / Less</li>
                         <li>- MySQL</li>
                         <li>- WordPress</li>
                         <li>- Git</li>
                         <li>- Github</li>
                         <li>- Gitlab</li>
-                        <li>- Photoshop</li>
                         <li>- Laravel</li>
+                        <li>- Tomcat</li>
                     </ul>
                 </div>
                 <div class="experiencia">
@@ -79,6 +83,10 @@
                     <div class="exp2">
                         <h3 class="h5">Prácticas de grado superior realizadas en UXmonkeys</h3>
                         <p>- Mantenimiento, gestión y administración de la base de datos y de la web a través de WordPress JavaScript y JQuery.</p>
+                    </div>
+                    <div class="exp3">
+                        <h3 class="h5">Albadoc - Desarrollador de aplicaciones web</h3>
+                        <p>- Despliegue, maquetación, diseño, programación y configuración con CMS</p>
                     </div>
                 </div>
             </div>
